--- a/app/views/playlists/_form.html.erb
+++ b/app/views/playlists/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :user_id %>
-    <%= form.text_field :user_id, id: :playlist_user_id %>
+    <%= form.select :user_id, User.all.collect{|x| [x.name, x.id]}, id: :playlist_user_id, prompt: "Seleccione usuario" %>
   </div>
 
   <div class="actions">
